// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PSJ Connection Scenarios .connect connection failure allows reconnect: stdOut 1`] = `
"> .connect -D /dev/ttyACM99
Connecting ... 

Connecting to serial device at /dev/ttyACM99

ERR: Error: No such file or directory, cannot open /dev/ttyACM99

> .connect
Connecting ... 

Connecting to serial device at /dev/ttyACM0

> "
`;

exports[`PSJ Connection Scenarios .connect connects to /dev/ttyACM0: stdOut 1`] = `
"> .connect
Connecting ... 

Connecting to serial device at /dev/ttyACM0

> "
`;

exports[`PSJ Connection Scenarios .disconnect disconnects from /dev/ttyACM0: stdOut 1`] = `
"Connecting ... 

Connecting to serial device at /dev/ttyACM0

> .disconnect
Disconnecting ... 

> "
`;

exports[`PSJ Connection Scenarios .exit in REPL quits process: stdOut 1`] = `"> .exit"`;

exports[`PSJ Connection Scenarios .ls shows error when not connected: stdOut 1`] = `
"> .ls
ERR: Not connected, run .connect to connect to a device running Pico-Sdk-JS.

> "
`;

exports[`PSJ Connection Scenarios command line args --auto-connect connects to /dev/ttyACM0: stdOut 1`] = `
"Connecting ... 

Connecting to serial device at /dev/ttyACM0

> "
`;

exports[`PSJ Connection Scenarios command line args --help shows help: stdOut 1`] = `
"Options:
      --help                Show help                                  [boolean]
      --version             Show version number                        [boolean]
      --log-level, --ll     Sets the log level of the output.
     [string] [choices: "error", "warning", "debug", "trace"] [default: "error"]
      --auto-connect, --ac  Automatically connects on start.           [boolean]
  -l, --local               Starts a local process to connect to. NOTE: Must set
                            the "PSJ_LOCAL" environment variable to the
                            pico-sdk-js executable.                    [boolean]
      --skip-header         Do not output the process header.
                                                      [boolean] [default: false]
"
`;
